--- a/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
+++ b/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
@@ -627,6 +627,55 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BxF-PA-Jwe">
+                                <rect key="frame" x="0.0" y="47.5" width="375" height="478.5"/>
+                                <subviews>
+                                    <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t6f-cD-rMm">
+                                        <rect key="frame" x="0.0" y="15.5" width="375" height="449.5"/>
+                                    </arscnView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="target_PNG9.png" translatesAutoresizingMaskIntoConstraints="NO" id="xW4-d4-IL9" userLabel="target">
+                                        <rect key="frame" x="152" y="171" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MSZ-Qa-bpt" userLabel="Timer">
+                                        <rect key="frame" x="187" y="214.5" width="100" height="48"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.0" green="0.1529411765" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                        <color key="textColor" red="0.91764705879999997" green="0.67450980390000004" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CEz-2P-vao">
+                                        <rect key="frame" x="8" y="0.0" width="359" height="471"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qWH-pJ-iCV">
+                                                <rect key="frame" x="123" y="264" width="129" height="162"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Ready"/>
+                                                <connections>
+                                                    <action selector="readyButton:" destination="jeU-mm-bRb" eventType="touchUpInside" id="oI9-lL-6ub"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="instruction screen:Your objective is to kill the shark. " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="id8-lW-8vO">
+                                                <rect key="frame" x="61" y="210" width="252" height="161"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="t6f-cD-rMm" firstAttribute="leading" secondItem="BxF-PA-Jwe" secondAttribute="leading" id="48X-uW-AXC"/>
+                                    <constraint firstItem="t6f-cD-rMm" firstAttribute="centerY" secondItem="BxF-PA-Jwe" secondAttribute="centerY" constant="-6.5" id="H0F-el-MSv"/>
+                                    <constraint firstItem="t6f-cD-rMm" firstAttribute="top" secondItem="BxF-PA-Jwe" secondAttribute="top" constant="8" id="c0b-yY-i4v"/>
+                                    <constraint firstAttribute="trailing" secondItem="t6f-cD-rMm" secondAttribute="trailing" id="e37-pp-YUl"/>
+                                </constraints>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dKv-el-V7R">
                                 <rect key="frame" x="165" y="20" width="45.5" height="20.5"/>
                                 <subviews>
@@ -638,41 +687,6 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BxF-PA-Jwe">
-                                <rect key="frame" x="0.0" y="47.5" width="375" height="478.5"/>
-                                <subviews>
-                                    <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t6f-cD-rMm">
-                                        <rect key="frame" x="0.0" y="-7" width="375" height="449.5"/>
-                                    </arscnView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MSZ-Qa-bpt" userLabel="Timer">
-                                        <rect key="frame" x="18" y="16" width="60" height="60"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.0" green="0.1529411765" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                        <color key="textColor" red="0.91764705879999997" green="0.67450980390000004" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="target_PNG9.png" translatesAutoresizingMaskIntoConstraints="NO" id="xW4-d4-IL9" userLabel="target">
-                                        <rect key="frame" x="137" y="179" width="100" height="100"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="t6f-cD-rMm" firstAttribute="leading" secondItem="BxF-PA-Jwe" secondAttribute="leading" id="S4Y-Lr-Krf"/>
-                                    <constraint firstItem="t6f-cD-rMm" firstAttribute="top" secondItem="BxF-PA-Jwe" secondAttribute="top" constant="-7" id="f5J-bo-0eN"/>
-                                    <constraint firstAttribute="trailing" secondItem="t6f-cD-rMm" secondAttribute="trailing" id="oZk-W4-Wza"/>
-                                    <constraint firstItem="t6f-cD-rMm" firstAttribute="centerY" secondItem="BxF-PA-Jwe" secondAttribute="centerY" constant="-21.5" id="y5w-kS-gGa"/>
-                                </constraints>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qWH-pJ-iCV">
-                                <rect key="frame" x="167" y="293" width="43" height="103"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Ready"/>
-                                <connections>
-                                    <action selector="readyButton:" destination="jeU-mm-bRb" eventType="touchUpInside" id="oI9-lL-6ub"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.84794042410000003" green="1" blue="0.98637846959999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -691,6 +705,8 @@
                     <connections>
                         <outlet property="StartButton" destination="ea1-ax-fXj" id="Zci-LE-YR6"/>
                         <outlet property="StopButton" destination="MBB-N2-5Kx" id="YMA-3K-KWn"/>
+                        <outlet property="instructionScreen" destination="CEz-2P-vao" id="lq7-gm-RZv"/>
+                        <outlet property="readyButton" destination="qWH-pJ-iCV" id="n3w-a4-7Ss"/>
                         <outlet property="sceneView" destination="t6f-cD-rMm" id="Mgd-PA-oMG"/>
                         <outlet property="timeLabel" destination="MSZ-Qa-bpt" id="yhq-Kp-cDN"/>
                     </connections>
