--- a/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
+++ b/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="d0S-V0-1er" kind="show" id="jeG-WE-leo"/>
+                                    <action selector="loginPressed:" destination="sIZ-dL-yjA" eventType="touchUpInside" id="Oeo-ku-RMh"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NOC-CG-9ii">
@@ -80,6 +80,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ozQ-1B-9va" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="sIZ-dL-yjA" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-1332" y="26.53673163418291"/>
         </scene>
@@ -1000,12 +1001,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LogoV1" width="340" height="340"/>
+        <image name="LogoV1" width="170" height="170"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="XlF-42-8sE"/>
         <segue reference="2zV-sZ-Ao8"/>
         <segue reference="3Lk-Y4-FqU"/>
-        <segue reference="jeG-WE-leo"/>
+        <segue reference="Dyz-83-5eW"/>
     </inferredMetricsTieBreakers>
 </document>
